--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="/signup" method="POST" id="signup-form">
+    <form action="/login" method="POST" id="login-form">
         <h1>회원 가입</h1>
         <div>
             <label for="id">아이디</label>
@@ -24,6 +24,10 @@
         <div id="info"></div>
     </form>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.11.1/sha256.min.js"
+        integrity="sha512-YVITnHZw4RIWJdL3B3qiUUjFwe2999f7+GY9p75emmKu62hze4Tr1hSG5SSDPAp1WaMMbjGOZL9YaNzO5UDpYg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
